# scop

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  TODO  auteur  configure.sh  scop  scop.mk
include/: bitmap.h  libmatrix.h  loader.h  material_template_library_loader.h  object_loader.h  object_loading.h  scop.h  tga.h  utils.h
make/: Makefile  scop.mk
resources/MLP1/: MLP1_HP.mtl  ML_HP.mtl
shaders/: SimpleFragmentShader.glsl  SimpleVertexShader.glsl  SimpleVertexShader.vertexshader
shaders/axis/: FragmentShader.glsl  GeometryShader.glsl
shaders/mesh/: FragmentShader.glsl  VertexShader.glsl
shaders/normals/: GeometryShader.glsl  VertexShader.glsl
shaders/plan/: FragmentShader.glsl  GeometryShader.glsl  VertexShader.glsl
src/: end_program.c  glfw_init.c  main.c  run.c  system_init.c
src/controls/: close.c  controls.c  keyboards.c  light.c  lock.c  move.c  render.c  resize.c  scale.c  toggles.c  unlock.c
src/core/: apply_rotation.c  check_gl_error.c  compute_mvp.c  compute_vertex_normal.c  compute_vertex_uvs.c  count_vertices.c  create_triangle.c  exit_error_with_msg.c  gl_attribute.c  gl_buffering.c  gl_indexing.c  gl_lighting.c  gl_log.c  gl_matrixing.c  gl_texture.c  gl_texturing.c  is_vertex_same.c  load_shaders.c  load_texture.c  math_utils.c  render.c  render_mesh.c  render_meshs_normals.c  set_attribute.c  smart_camera_position.c
src/end_program/: del_mtl_data.c  del_mtllib.c  del_polygon.c  del_usemtl.c  del_vertex.c  end_program.c
src/lib/: build_vertex_buffer.c  check_gl_error.c  count_vertices.c  create_triangle.c  exit_error_with_msg.c  gl_buffering.c  gl_log.c  load_bitmap_file.c  load_shaders.c  load_single_shader.c  load_texture.c  math_utils.c  prepare.c  render.c  set_attribute.c
src/libmatrix/: rotation_matrix.c
src/libmatrix/cmake/: CMakeLists.txt
src/libmatrix/include/: libmatrix.h  libmatrixerror.h  mat4.h  vec2.h  vec3.h  vec4.h
src/libmatrix/make/: Makefile  libmatrix.mk  libmatrix_test.mk
src/libmatrix/scripts/: test.sh
src/libmatrix/src/mat4/: add_mat4.c  copy_mat4.c  delete_matrix.c  fill_mat4.c  look_at_mat4.c  look_at_mat4_2.c  mat4.c  mat4_on_vec3.c  multiply_mat4.c  perspective_mat4.c  pmatrix.c  printmat4.c  rotate_mat4.c  rotate_to_mat4.c  scale_mat4.c  translate_mat4.c  transpose_mat4.c
src/libmatrix/src/matrix/: add_matrix.c  compare_matrix.c  copy_matrix.c  delete_matrix.c  determinant.c  fill_matrix.c  identity_matrix.c  inverse_matrix.c  libmatrix_error.c  matrix_at.c  minor.c  multiply_matrix.c  multiply_matrix_with_scalar.c  new_matrix.c  new_matrix_from_raw.c  pmatrix.c  transpose.c
src/libmatrix/src/utils/: libmatrix_ftoa.c  libmatrix_stringutils.c  libmatrix_utils.c  libmatrix_utils_hexxtoa.c  libmatrix_utils_xtoa.c  libmatrixutil_append_and_release_memory.c
src/libmatrix/src/vec2/: new_vec2.c  vec2.c
src/libmatrix/src/vec3/: are_vec3_equal.c  constant.c  copy_vec3.c  dot_product_vec3.c  is_origin_vec3.c  magnitude_vec3.c  new_vec3.c  normalize_vec3.c  set_vec3.c  swap_vec3.c
src/libmatrix/src/vec3/operations/: add_vec3.c  cross_vec3.c  dot_product_vec3.c  return_add_vec3.c  return_cross_vec3.c  return_sub_vec3.c  scale_vec3.c  sub_vec3.c  substract_vec3.c
src/libmatrix/test/: main1.c  test_delete_matrix.c  test_fill_matrix.c  test_multiply_mat4.c  test_multiply_matrix.c  test_multiply_matrix_with_scalar.c  test_new_matrix.c  test_new_matrix_from_raw.c  test_package.c  test_package.h  test_pmat4.c  test_pmatrix.c  test_transpose_mat4.c
src/libvec/: Makefile  TODO  libvec.mk
src/libvec/include/: libvec.h
src/libvec/src/: are_vec_equal.c  constant.c  copy_vec.c  is_vec_origin.c  normalize_vec.c  set_vec.c  swap_vec.c
src/libvec/src/operations/: add_vec.c  dot_product_vec.c  magnitude_vec.c  scale_vec.c  substract_vec.c
src/loader_utils/: n_atof.c  n_atoi.c  split_into_tokens.c  split_whitespaces.c  utils.c
src/mtl_loader/: load_mtl_file.c  load_mtllib.c  read_ambient_color.c  read_comment.c  read_diffuse_color.c  read_dissolved.c  read_illumination.c  read_mtl_error.c  read_mtl_file_line.c  read_new_mtl.c  read_optical_density.c  read_specular_color.c  read_specular_color_exponent.c  read_transparency.c
src/object_loader/: kongs_triangulation.c  load_object_file.c  load_object_file_utils.c  n_atof.c  print_object.c  print_token.c  print_vec.c  read_color.c  read_comment.c  read_face.c  read_mtl.c  read_mtllib.c  read_name.c  read_normal_vector.c  read_object_error.c  read_object_file_line.c  read_position.c  read_poylgon.c  read_smooth_shading.c  read_usemtl.c  read_uv.c  read_vec2.c  read_vec3.c  read_vertex.c  split_into_tokens.c
src/shader/: cleanup_shader_program.c  compile_shader.c  load_program_shader.c  load_shaders.c  load_single_shader.c  print_shader_error.c
src/texture_loader/: load_bitmap_file.c  load_texture.c  load_texture_file.c
src/texture_loader/bmp/: load_bitmap_file.c  load_bitmap_file_header.c
src/texture_loader/tga/: decode_tga.c  fill_tga_header.c  load_tga_file.c  utils.c
src/utils/: extract_folder_from_path.c  ft_lstadd.c  ft_lstdel.c  ft_lstdelone.c  ft_lstfind.c  ft_lstindex.c  ft_lstlen.c  ft_lstnew.c  ft_lstreverse.c  ft_strjoin.c  lst_data_at.c
src/win64/: escape_path_antislash.c  load_single_shader.c  mmap.c  strndup.c
test/: batard.sh  test_files.sh
